# Mimas_ROS2_dev

./: lidar_odometry_to_dos.txt
Goktug_result/: analyze_results.py
Yukang_result_ICRA/: analyze_results.py
Yukang_result_ICRA/Yukang_results_128/: traj_multi_plot.py
Yukang_results_ICRA/: traj_plot.py
alphatruck_bringup/: package.xml  setup.cfg  setup.py
alphatruck_bringup/config/: alphatruck_online_async.yaml  ekf.yaml
alphatruck_bringup/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
alphatruck_bringup/launch/: alphatruck_full_system.launch.py  alphatruck_semi_system.launch.py  alphatruck_state_pub.launch.py  start_planner.launch.py
alphatruck_bringup/log/: latest_build
alphatruck_bringup/map/: ahg_upper_floor.pgm  ahg_upper_floor.yaml
alphatruck_bringup/params/: experiment_config.yaml  experiment_config_goktug.yaml
controllers/: package.xml  setup.py
controllers/controllers/: local_planner_node.py  local_planner_node_uae.py
mocap_tf_broadcaster/: package.xml  setup.cfg  setup.py
mocap_tf_broadcaster/mocap_tf_broadcaster/: broadcaster_node.py
perception/: package.xml  setup.py
perception/launch/: perception_full.launch.py
perception/perception/: costmap_processor_node.py  test_goal_publisher.py
uge_mpc_ros2/: package.xml  setup.cfg  setup.py
uge_mpc_ros2/launch/: uge_controller.launch.py
xmaxx_bringup/: CMakeLists.txt  CMakeLists_bkp.txt  package.xml
xmaxx_bringup/src/: xmaxx.cpp  (+2 more)
xmaxx_controller/: package.xml  setup.cfg  setup.py
xmaxx_msgs/: CMakeLists.txt  package.xml
xmaxx_msgs/msg/: XmaxxTelem.msg
(+254 files in other folders)
